<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <name>BookShopOnline</name>
    <artifactId>BookShopOnline</artifactId>
    <groupId>com.BookShop</groupId>
     <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    
   

    <description>
    Progetto per il corso di Ingegneria del Software e Progettazione Web,
    Progetto in Java11 sviluppato usando Maven , Juntix e Selenium per test 
    	
    </description>

    <url>https://github.com/example/test</url>

    <licenses>
        <license>
            <name>MIT</name>
            <url>https://spdx.org/licenses/MIT.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>Example Organization</name>
        <url>http://example.com/</url>
    </organization>

    <scm>
        <url>https://github.com/example/test</url>
        <connection>git@github.com:example/test.git</connection>
        <developerConnection>git@github.com:example/test.git</developerConnection>
    </scm>

    <issueManagement>
        <system>Issues</system>
        <url>https://github.com/example/test/issues</url>
    </issueManagement>

    <ciManagement>
        <system>Pipelines</system>
        <url>https://github.com/example/test/pipelines</url>
    </ciManagement>

    <contributors>
        <contributor>
            <name>Some Contributor</name>
            <email>some.contributor@example.com</email>
            <url>http://example.com/</url>
            <organization>Example Organization</organization>
            <organizationUrl>http://example.com/</organizationUrl>
            <roles>
                <role>scrum-master</role>
            </roles>
            <timezone>Europe/Amsterdam</timezone>
        </contributor>
        <contributor>
            <name>Another Contributor</name>
            <email>another.contributor@example.com</email>
            <url>http://example.com/</url>
            <organization>Example Organization</organization>
            <organizationUrl>http://example.com/</organizationUrl>
            <roles>
                <role>product-owner</role>
            </roles>
            <timezone>Europe/Amsterdam</timezone>
        </contributor>
    </contributors>

    <developers>
        <developer>
            <id>Evoi95</id>
            <email>evoi95@gmail.com</email>
            <name>Evoi95</name>
            <organizationUrl>https://github.com/Evoi95</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>Europe/Amsterdam</timezone>
        </developer>
        <developer>
            <id>IlCiro</id>
            <email>danielecinus10@gmail.com</email>
            <name>ilciro</name>
            <organizationUrl>https://github.com/ilciro</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>Europe/Amsterdam</timezone>
        </developer>
    </developers>
	

	<profiles>
	<profile>
	  <id>sonar</id>
	<properties>
	    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
	    <sonar.organization>evoi95</sonar.organization>
	  </properties>
	  <build>
	    <plugins>
	      <plugin>
	        <groupId>org.jacoco</groupId>
	        <artifactId>jacoco-maven-plugin</artifactId>
	      </plugin>
	      <plugin>
	        <groupId>org.sonarsource.scanner.maven</groupId>
	        <artifactId>sonar-maven-plugin</artifactId>
	      </plugin>
	    </plugins>
	  </build>
	</profile>
	</profiles>
	
  <properties>
    <!-- Dependency versions -->
    <junit.jupiter.version>5.6.2</junit.jupiter.version>
    <maven-surefire-plugin.version>2.22.1</maven-surefire-plugin.version>
    <!-- Java 11 -->
    <java.version>11</java.version>
  
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>11</maven.compiler.source>
    <maven.compiler.target>11</maven.compiler.target>
    <maven.compiler.release>11</maven.compiler.release>
    <sonar.projectKey>Evoi95_BSO-Maven</sonar.projectKey>
	<sonar.organization>evoi95</sonar.organization>
	<sonar.host.url>https://sonarcloud.io</sonar.host.url>
  </properties>


  <build>
    <pluginManagement>
    <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
        <plugin>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <!-- default lifecycle, jar packaging: see https://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->

        <plugin>
		    <groupId>org.codehaus.mojo</groupId>
		    <artifactId>versions-maven-plugin</artifactId>
		    <version>2.5</version>
		    <configuration>
		        <generateBackupPoms>false</generateBackupPoms>
		    </configuration>
		</plugin>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
            <configuration>
				<release>11</release>
				<source>11</source>
				<target>11</target>
			</configuration>
        </plugin>
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.22.1</version>
          	<configuration>
		        <argLine>
		            --illegal-access=permit
		        </argLine>
		        <skipTests>true</skipTests>
                <testFailureIgnore>true</testFailureIgnore>
               <!--  <forkCount>0</forkCount>--> 
		    </configuration>
        </plugin>
        <plugin>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-failsafe-plugin</artifactId>
		    <version>2.22.1</version>
		    <configuration>
		        <argLine>
		            --illegal-access=permit
		        </argLine>
		    </configuration>
		</plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.1.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-install-plugin</artifactId>
          <version>2.5.2</version>
        </plugin>
        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.2</version>
        </plugin>
        <!-- site lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#site_Lifecycle -->
        <plugin>
          <artifactId>maven-site-plugin</artifactId>
          <version>3.7.1</version>
        </plugin>
        <plugin>
          <artifactId>maven-project-info-reports-plugin</artifactId>
          <version>3.0.0</version>
        </plugin>
	    <plugin>
	      <groupId>org.sonarsource.scanner.maven</groupId>
	      <artifactId>sonar-maven-plugin</artifactId>
	      <version>3.5.0.1254</version>
	      <executions>
	        <execution>
	          <phase>verify</phase>
	          <goals>
	            <goal>sonar</goal>
	          </goals>
	        </execution>
	      </executions>
	    </plugin>
	    <plugin>
	      <groupId>org.jacoco</groupId>
	      <artifactId>jacoco-maven-plugin</artifactId>
	      <version>0.8.2</version>
	      <configuration>
	        <append>true</append>
	      </configuration>
	      <executions>
	        <execution>
	          <id>prepare-agent</id>
	          <goals>
	            <goal>prepare-agent</goal>
	          </goals>
	        </execution>
	        <execution>
	          <id>prepare-agent-integration</id>
	          <goals>
	            <goal>prepare-agent-integration</goal>
	          </goals>
	        </execution>
	        <execution>
	          <id>jacoco-site</id>
	          <phase>verify</phase>
	          <goals>
	            <goal>report</goal>
	          </goals>
	        </execution>
	      </executions>
	    </plugin>
    </plugins>
    </pluginManagement>
  </build>
  <dependencies>
  	<dependency>
  		<groupId>org.javassist</groupId>
  		<artifactId>javassist</artifactId>
  		<version>3.23.1-GA</version>
  	</dependency>
  	<dependency>
  		<groupId>cglib</groupId>
  		<artifactId>cglib-nodep</artifactId>
  		<version>3.2.7</version>
  	</dependency>
  	<dependency>
  		<groupId>org.junit.jupiter</groupId>
  		<artifactId>junit-jupiter-engine</artifactId>
  		<version>5.6.2</version>
  		<scope>test</scope>
  	</dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>5.6.2</version>
			<scope>test</scope>
        </dependency>
        <dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-base</artifactId>
        	<version>11.0.2</version>
        </dependency>
        <dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-controls</artifactId>
        	<version>11.0.2</version>
        </dependency>
        <dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-graphics</artifactId>
        	<version>11.0.2</version>
        </dependency>
        <dependency>
        	<groupId>org.openjfx</groupId>
        	<artifactId>javafx-fxml</artifactId>
        	<version>11.0.2</version>
        </dependency>
        <dependency>
        	<groupId>org.mybatis</groupId>
        	<artifactId>mybatis</artifactId>
        	<version>3.4.5</version>
        </dependency>
        <dependency>
        	<groupId>com.itextpdf</groupId>
        	<artifactId>itextpdf</artifactId>
        	<version>5.5.9</version>
        </dependency>
		<dependency>
    		<groupId>mysql</groupId>
    		<artifactId>mysql-connector-java</artifactId>
    		<version>8.0.22</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher -->
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat</artifactId>
			<version>9.0.41</version>
			<type>pom</type>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.jacoco/jacoco-maven-plugin -->
		<dependency>
		    <groupId>org.jacoco</groupId>
		    <artifactId>jacoco-maven-plugin</artifactId>
		    <version>0.8.4</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/org.testfx/testfx-junit5 -->
		<dependency>
		    <groupId>org.testfx</groupId>
		    <artifactId>testfx-junit5</artifactId>
		    <version>4.0.16-alpha</version>
		    <scope>test</scope>
		</dependency>
		
  </dependencies>

</project>